# ecommerce_tcc

./: .env.default  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b05f4e6d4829_.py
backend/ecommerce_tcc/adapters/: models.py  orm.py  product_repository.py
backend/ecommerce_tcc/domain/: product.py
backend/ecommerce_tcc/entrypoints/: api.py  config.py  schema.py
backend/ecommerce_tcc/services/: warehouse.py
backend/tests/: warehouse_test.py
ecommerce_tcc/: api.py  product.py  warehouse.py
ecommerce_tcc/adapters/: orm.py  product_repository.py
ecommerce_tcc/domain/: exceptions.py  product.py  warehouse.py
ecommerce_tcc/entrypoints/: api.py
ecommerce_tcc/services/: warehouse.py
frontend/ecommerce_tcc/: app.py  config.py
frontend/ecommerce_tcc/templates/: base.html  homepage.html  warehouse.html
frontend_admin/: Dockerfile  pyproject.toml
frontend_admin/ecommerce_tcc/: app.py
frontend_admin/ecommerce_tcc/templates/: base.html  login.html  new_product.html  update_product.html  warehouse.html
frontend_pub/: Dockerfile
frontend_pub/ecommerce_tcc/: app.py
frontend_pub/ecommerce_tcc/templates/: base.html  cart.html  homepage.html
tests/: warehouse_test.py
