[tool.poetry]
name = "ecommerce-tcc"
version = "0.1.0"
description = ""
authors = ["Leonardo <leonardocloliver@gmail.com>"]
readme = "README.md"
packages = [{include = "ecommerce_tcc"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
redis = "^4.4.2"
postgres = "^4.0"
alembic = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.15.10"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
