[tool.poetry]
name = "ecommerce-tcc"
version = "0.1.0"
description = ""
authors = ["Leonardo <leonardocloliver@gmail.com>"]
readme = "README.md"
packages = [{include = "ecommerce_tcc"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
requests = "^2.28.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
